assets/css/style.css
:root {
    --second-content-white: #e4e4e4;
    --first-content-white: #d1d1d1;
    --mid-grey: #8d8d8d;
    --slate: #464646;
    --ink-print: #212529;

}

body {
    background-color: var(--first-content-white);
    font-family: 'Roboto', serif;
    /* padding-top: 16px; */
    margin-bottom: 48px;
}

#first-content {
    /* height: 75vh; */
    padding: 0 0 16px 0;
    background-color: var(--second-content-white);
    /* border-bottom: 1px solid var(--mid-grey); */
}

#second-content {
    /* padding: 0; */
    background-color: var(--first-content-white);
}

.slate {
     color: var(--slate);
     font-weight: 300;
}

.subhead {
    font-size: 1.2rem;
    font-weight: 500;
    /* text-align: center; */
}

.text-center h1 {
    font-size: 3.4rem;
    letter-spacing: 4px;
}

.logo {
    margin: 8px 0 16px 0;
    font-family: 'Forum', cursive;
}

#logo-x {
    /* font-family: 'IM Fell Double Pica SC', serif; */
    font-family: 'Forum', cursive;
    text-shadow: 1px 1px 3px #911100;
}

div#map {
    height: 50vh;
    margin-bottom: 16px;
}

.current-loc p {
    margin: -1px 15px;
    padding: 3px 8px;
    background-color: var(--ink-print);
    color: var(--first-content-white);
}

.focus-loc {
    text-align: center;
    margin: 0 15px;
    border: 2px solid var(--ink-print);
}

#selected-loc {
    color: var(--ink-print);
    font-weight: 400;
    margin: 0;
    padding: 12px 0;
}

.extract-main {
    /* background-color: var(--first-content-white); */
    margin-top: 12px;
}

.card {
    background-color: inherit;
    border: none;
}

.card-header {
    background-color: inherit;
    margin: 0;
    padding: 0;
    border: none;
    
}

#headingOne {
    margin-bottom: 16px;
    background-color: var(--ink-print);
    text-align: center;
}

#history-header {
    color: var(--first-content-white);
    padding-bottom: 4px;
}

.card-body {
    padding: 0;
}

.btn-default {
    padding: 0;
    text-decoration: none;
}

.btn:focus {
    box-shadow: none;
}

#history-pars h3 {
    /* margin: 36px 0 8px 0; */
    /* border-bottom: 1px solid #e4e4e4; */
    border-top: 1px solid var(--first-content-white);
    padding: 36px 0 10px 0;
}

a {
    color: inherit;
}

a:hover {
    text-decoration: none;
    color: inherit;
}

#footer {
    background-color: var(--ink-print);
    color: var(--first-content-white);
    text-align: center;
    position: fixed;
    left: 0px;
    bottom: 0px;
    height: 48px;
    width: 100%;
    padding: 4% 0;
    display: none;
}

#footer span {
    padding: 0 10px;
}

#hidden-content {
    display: none;
}

